Update global css style

--- a/content/scss/global.scss
+++ b/content/scss/global.scss
@@ -9,7 +9,7 @@ h1,
 h2,
 h3,
 h4 {
-    font-weight: 300;
+    font-weight: 400;
 }
 
 a {
@@ -39,7 +39,7 @@ Generic styles
 ========================================================================== */
 body {
     background: white;
-    font-family: Microsoft JhengHei !important, Arial !important, Sans-serif !important;
+    font-family: Microsoft JhengHei, Arial, Sans-serif;
 }
 
 /* Error highlight on input fields */
